# edgevision

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SUMMARY.md  api\main.py  api\requirements.txt  build.bat  build.sh  config\behaviors.yaml  config\channels.yaml  config\system.yaml  docs\DEVELOPMENT.md  run_api.bat  runner.py  scripts\edgevision.service  setup.sh  src\alert\alert_manager.cpp  src\alert\alert_manager.h  src\behavior\behavior_engine.cpp  src\behavior\behavior_engine.h  src\config\config_manager.cpp  src\config\config_manager.h  src\core\event_bus.cpp  src\core\event_bus.h  src\core\frame_queue.cpp  src\core\frame_queue.h  src\inference\inference_engine.cpp  src\inference\inference_engine.h  src\main.cpp  src\monitor\system_monitor.cpp  src\monitor\system_monitor.h  src\pipeline\analyzer_pipeline.cpp  src\pipeline\analyzer_pipeline.h  src\preprocess\preprocessor.cpp  src\preprocess\preprocessor.h  src\snapshot\snapshot_manager.cpp  (+38 more)
.github/ISSUE_TEMPLATE/: bug_template.md  feature_template.md
api/: config_encoding.py  config_validator.py
docs/: CONFIGURATION.md  PERFORMANCE.md  SECURITY.md
